first display for active players
- need to add deconnect
- improve chat

--- a/client/src/pages/Main/Main.scss
+++ b/client/src/pages/Main/Main.scss
@@ -20,4 +20,13 @@
       gap: 0.4rem;
     }
   }
+
+  .playContainer {
+    height: 100%;
+    display: flex;
+
+    .playingSide {
+      flex: auto;
+    }
+  }
 }
